crates/djls-project/tests/snapshots/extraction__golden_allauth_tags.snap
---
source: crates/djls-project/tests/extraction.rs
expression: "sorted_snapshot(&result).expect(\"allauth extraction snapshot should serialize\")"
---
definitions:
  "tag::element":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities: {}
block_specs:
  "allauth.templatetags.allauth::tag::element":
    body_analysis_evidence: not_detected
    end_tag: endelement
    intermediates: []
