crates/djls-project/tests/snapshots/extraction__golden_call_style_no_func_def.snap
---
source: crates/djls-project/tests/extraction.rs
expression: "sorted_snapshot(&result).expect(\"missing-definition extraction snapshot should serialize\")"
---
definitions:
  "tag::for":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities: {}
block_specs: {}
