crates/djls-project/tests/snapshots/extraction__golden_custom_tags.snap
---
source: crates/djls-project/tests/extraction.rs
expression: "sorted_snapshot(&result).expect(\"custom-tag extraction snapshot should serialize\")"
---
tag_rules:
  "tests.template_tests.templatetags.custom::tag::div":
    arg_constraints:
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: id
          requirement: optional
          kind: Variable
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::no_params":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters: []
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::no_params_with_context":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters: []
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::one_param":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: arg
          requirement: required
          kind: Variable
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::simple_one_default":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: one
          requirement: required
          kind: Variable
        - name: two
          requirement: optional
          kind: Variable
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::simple_two_params":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: one
          requirement: required
          kind: Variable
        - name: two
          requirement: required
          kind: Variable
    as_var: strip
filter_arities: {}
block_specs:
  "tests.template_tests.templatetags.custom::tag::div":
    body_analysis_evidence: not_detected
    end_tag: enddiv
    intermediates: []
