crates/djls-project/tests/snapshots/extraction__golden_defaulttags.snap
---
source: crates/djls-project/tests/extraction.rs
expression: "sorted_snapshot(&result).expect(\"default-tags extraction snapshot should serialize\")"
---
tag_rules:
  "django.template.defaulttags::tag::autoescape":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints:
      - position:
          Forward: 1
        values:
          - "on"
          - "off"
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 2
        message:
          Static: "'autoescape' tag requires exactly one argument."
      - constraint:
          ChoiceAt:
            position:
              Forward: 1
            values:
              - "on"
              - "off"
        message:
          Static: "'autoescape' argument should be 'on' or 'off'"
    argument_syntax:
      Parameters:
        - name: arg
          requirement: required
          kind: Variable
    as_var: keep
  "django.template.defaulttags::tag::cycle":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 2
        message:
          Static: "'cycle' tag requires at least two arguments"
      - constraint:
          RequiredKeyword:
            position:
              Backward: 1
            value: silent
        message:
          PercentFormat:
            template: "Only 'silent' flag is allowed after cycle's name, not '%s'."
            args:
              - SplitElement:
                  Backward: 1
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
    as_var: keep
  "django.template.defaulttags::tag::for":
    arg_constraints:
      - Min: 4
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
        - name: arg2
          requirement: required
          kind: Variable
        - name: arg3
          requirement: required
          kind: Variable
    as_var: keep
  "django.template.defaulttags::tag::now":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 2
        message:
          Static: "'now' statement takes one argument"
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
    as_var: strip
  "django.template.defaulttags::tag::partial":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
    as_var: keep
  "django.template.defaulttags::tag::partialdef":
    arg_constraints:
      - OneOf:
          - 2
          - 3
    required_keywords:
      - position:
          Forward: 2
        value: inline
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
        - name: inline
          requirement: required
          kind:
            Literal: inline
    as_var: keep
  "django.template.defaulttags::tag::querystring":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: args
          requirement: optional
          kind: VarArgs
    as_var: strip
  "django.template.defaulttags::tag::regroup":
    arg_constraints:
      - Exact: 6
    required_keywords:
      - position:
          Forward: 2
        value: by
      - position:
          Forward: 4
        value: as
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 6
        message:
          Static: "'regroup' tag takes five arguments"
      - constraint:
          RequiredKeyword:
            position:
              Forward: 2
            value: by
        message:
          Static: "second argument to 'regroup' tag must be 'by'"
      - constraint:
          RequiredKeyword:
            position:
              Forward: 4
            value: as
        message:
          Static: "next-to-last argument to 'regroup' tag must be 'as'"
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
        - name: by
          requirement: required
          kind:
            Literal: by
        - name: arg3
          requirement: required
          kind: Variable
        - name: as
          requirement: required
          kind:
            Literal: as
        - name: var_name
          requirement: required
          kind: Variable
    as_var: keep
  "django.template.defaulttags::tag::templatetag":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 2
        message:
          Static: "'templatetag' statement takes one argument"
    argument_syntax:
      Parameters:
        - name: tag
          requirement: required
          kind: Variable
    as_var: keep
  "django.template.defaulttags::tag::url":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 2
        message:
          PercentFormat:
            template: "'%s' takes at least one argument, a URL pattern name."
            args:
              - SplitElement:
                  Forward: 0
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
    as_var: strip
  "django.template.defaulttags::tag::widthratio":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          RequiredKeyword:
            position:
              Forward: 4
            value: as
        message:
          Static: "Invalid syntax in widthratio tag. Expecting 'as' keyword"
    argument_syntax:
      Forms:
        forms:
          - arguments:
              - name: this_value_expr
                requirement: required
                kind: Variable
              - name: max_value_expr
                requirement: required
                kind: Variable
              - name: max_width
                requirement: required
                kind: Variable
          - arguments:
              - name: this_value_expr
                requirement: required
                kind: Variable
              - name: max_value_expr
                requirement: required
                kind: Variable
              - name: max_width
                requirement: required
                kind: Variable
              - name: as
                requirement: required
                kind:
                  Literal: as
              - name: asvar
                requirement: required
                kind: Variable
        coverage: complete
    as_var: keep
filter_arities: {}
block_specs:
  "django.template.defaulttags::tag::autoescape":
    body_analysis_evidence: not_detected
    end_tag: endautoescape
    intermediates: []
  "django.template.defaulttags::tag::comment":
    body_analysis_evidence: skip_past
    end_tag: endcomment
    intermediates: []
  "django.template.defaulttags::tag::for":
    body_analysis_evidence: not_detected
    end_tag: endfor
    intermediates:
      - empty
  "django.template.defaulttags::tag::if":
    body_analysis_evidence: not_detected
    end_tag: endif
    intermediates:
      - elif
      - else
  "django.template.defaulttags::tag::spaceless":
    body_analysis_evidence: not_detected
    end_tag: endspaceless
    intermediates: []
  "django.template.defaulttags::tag::verbatim":
    body_analysis_evidence: not_detected
    end_tag: endverbatim
    intermediates: []
