crates/djls-project/tests/snapshots/extraction__golden_django_admin_urls.snap
---
source: crates/djls-project/tests/extraction.rs
expression: "sorted_snapshot(&result).expect(\"Django admin URL extraction snapshot should serialize\")"
---
tag_rules:
  "django.contrib.admin.templatetags.admin_urls::tag::add_preserved_filters":
    arg_constraints:
      - Min: 2
      - Max: 4
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: url
          requirement: required
          kind: Variable
        - name: popup
          requirement: optional
          kind: Variable
        - name: to_field
          requirement: optional
          kind: Variable
    as_var: strip
filter_arities: {}
block_specs: {}
