crates/djls-project/tests/snapshots/extraction__golden_django_tz.snap
---
source: crates/djls-project/tests/extraction.rs
expression: "sorted_snapshot(&result).expect(\"timezone extraction snapshot should serialize\")"
---
tag_rules:
  "django.templatetags.tz::tag::get_current_timezone":
    arg_constraints:
      - Exact: 3
    required_keywords:
      - position:
          Forward: 1
        value: as
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: as
          requirement: required
          kind:
            Literal: as
        - name: arg2
          requirement: required
          kind: Variable
    as_var: keep
  "django.templatetags.tz::tag::localtime":
    arg_constraints:
      - Max: 2
    required_keywords: []
    choice_at_constraints:
      - position:
          Forward: 1
        values:
          - "on"
          - "off"
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Max: 2
        message:
          PercentFormat:
            template: "%r argument should be 'on' or 'off'"
            args:
              - SplitElement:
                  Forward: 0
      - constraint:
          ChoiceAt:
            position:
              Forward: 1
            values:
              - "on"
              - "off"
        message:
          PercentFormat:
            template: "%r argument should be 'on' or 'off'"
            args:
              - SplitElement:
                  Forward: 0
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
    as_var: keep
  "django.templatetags.tz::tag::timezone":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 2
        message:
          PercentFormat:
            template: "'%s' takes one argument (timezone)"
            args:
              - SplitElement:
                  Forward: 0
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
    as_var: keep
filter_arities: {}
block_specs:
  "django.templatetags.tz::tag::localtime":
    body_analysis_evidence: not_detected
    end_tag: endlocaltime
    intermediates: []
  "django.templatetags.tz::tag::timezone":
    body_analysis_evidence: not_detected
    end_tag: endtimezone
    intermediates: []
