crates/djls-project/tests/snapshots/extraction__golden_filter_method_style.snap
---
source: crates/djls-project/tests/extraction.rs
expression: "sorted_snapshot(&result).expect(\"call-style filter extraction snapshot should serialize\")"
---
definitions:
  "filter::upper":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities: {}
block_specs: {}
