crates/djls-project/tests/snapshots/extraction__golden_i18n.snap
---
source: crates/djls-project/tests/extraction.rs
expression: "sorted_snapshot(&result).expect(\"i18n extraction snapshot should serialize\")"
---
tag_rules:
  "django.templatetags.i18n::tag::blocktrans":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - with
        - count
        - context
        - trimmed
        - asvar
      duplicate_rejection: detected
      unknown_rejection: detected
    argument_syntax: Unknown
    as_var: keep
  "django.templatetags.i18n::tag::blocktranslate":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - with
        - count
        - context
        - trimmed
        - asvar
      duplicate_rejection: detected
      unknown_rejection: detected
    argument_syntax: Unknown
    as_var: keep
  "django.templatetags.i18n::tag::trans":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - noop
        - context
        - as
      duplicate_rejection: detected
      unknown_rejection: detected
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 2
        message:
          PercentFormat:
            template: "'%s' takes at least one argument"
            args:
              - SplitElement:
                  Forward: 0
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
    as_var: keep
  "django.templatetags.i18n::tag::translate":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - noop
        - context
        - as
      duplicate_rejection: detected
      unknown_rejection: detected
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 2
        message:
          PercentFormat:
            template: "'%s' takes at least one argument"
            args:
              - SplitElement:
                  Forward: 0
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
    as_var: keep
filter_arities: {}
block_specs:
  "django.templatetags.i18n::tag::blocktrans":
    body_analysis_evidence: not_detected
    end_tag: endblocktrans
    intermediates:
      - plural
  "django.templatetags.i18n::tag::blocktranslate":
    body_analysis_evidence: not_detected
    end_tag: endblocktranslate
    intermediates:
      - plural
