crates/djls-project/tests/snapshots/extraction__golden_inclusion_tags.snap
---
source: crates/djls-project/tests/extraction.rs
expression: "sorted_snapshot(&result).expect(\"inclusion-tag extraction snapshot should serialize\")"
---
definitions:
  "tag::inclusion_no_params":
    kind: tag
    has_doc: false
  "tag::inclusion_no_params_with_context":
    kind: tag
    has_doc: false
  "tag::inclusion_one_default":
    kind: tag
    has_doc: false
  "tag::inclusion_one_param":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "tests.template_tests.templatetags.inclusion::tag::inclusion_no_params":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "tests.template_tests.templatetags.inclusion::tag::inclusion_no_params_with_context":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "tests.template_tests.templatetags.inclusion::tag::inclusion_one_default":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: one
            requirement: required
            kind: Variable
          - name: two
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "tests.template_tests.templatetags.inclusion::tag::inclusion_one_param":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: arg
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
filter_arities: {}
block_specs: {}
