crates/djls-project/tests/snapshots/extraction__golden_invalid_python.snap
---
source: crates/djls-project/tests/extraction.rs
expression: "sorted_snapshot(&result).expect(\"invalid-Python extraction snapshot should serialize\")"
---
definitions: {}
symbols_are_unobserved: false
tag_rules: {}
filter_arities: {}
block_specs: {}
